# QSqlQueryModelInQML

./: CMakeLists.txt  README.md  new_project.cc  new_project.qml  sqlquerymodel.cc  sqlquerymodel.h
